--- a/index.html
+++ b/index.html
@@ -20,23 +20,23 @@
     
             </div>
             <div class="calculator-keys">
-                <button class="btn btn-warning fw-bolder fs-5" >7</button>
-                <button class="btn btn-warning fw-bolder fs-5" >8</button>
-                <button class="btn btn-warning fw-bolder fs-5" >9</button>
-                <button class="operator btn btn-warning fw-bolder fs-5" data-action="divide">&divide;</button>
-                <button class="btn btn-warning fw-bolder fs-5" >4</button>
-                <button class="btn btn-warning fw-bolder fs-5" >5</button>
-                <button class="btn btn-warning fw-bolder fs-5" >6</button>
-                <button class="operator btn btn-warning fw-bolder fs-5" data-action="multiply">&times;</button>
-                <button class="btn btn-warning fw-bolder fs-5" >1</button>
-                <button class="btn btn-warning fw-bolder fs-5" >2</button>
-                <button class="btn btn-warning fw-bolder fs-5" >3</button>
-                <button class="operator btn btn-warning fw-bolder fs-5" data-action="subtract">-</button>
-                <button class="btn btn-warning fw-bolder fs-5" >0</button>
-                <button class="btn btn-warning fw-bolder fs-5"  data-action="decimal">.</button>
-                <button class="btn btn-warning fw-bolder fs-5"  data-action="clear">AC</button>
-                <button class="operator btn btn-warning fw-bolder fs-5" data-action="add">+</button>
-                <button class="equal-span-four btn btn-warning fw-bolder fs-5" data-action="calculate" >=</button>
+                <button class="btn btn-warning fw-bolder fs-5" onclick="" >7</button>
+                <button class="btn btn-warning fw-bolder fs-5" onclick="" >8</button>
+                <button class="btn btn-warning fw-bolder fs-5" onclick="" >9</button>
+                <button class="operator btn btn-warning fw-bolder fs-5" data-action="divide"onclick="" >&divide;</button>
+                <button class="btn btn-warning fw-bolder fs-5" onclick="" >4</button>
+                <button class="btn btn-warning fw-bolder fs-5" onclick="" >5</button>
+                <button class="btn btn-warning fw-bolder fs-5" onclick="" >6</button>
+                <button class="operator btn btn-warning fw-bolder fs-5" data-action="multiply"onclick="" >&times;</button>
+                <button class="btn btn-warning fw-bolder fs-5" onclick="" >1</button>
+                <button class="btn btn-warning fw-bolder fs-5" onclick="" >2</button>
+                <button class="btn btn-warning fw-bolder fs-5" onclick="" >3</button>
+                <button class="operator btn btn-warning fw-bolder fs-5" data-action="subtract"onclick="" >-</button>
+                <button class="btn btn-warning fw-bolder fs-5" onclick="" >0</button>
+                <button class="btn btn-warning fw-bolder fs-5"  data-action="decimal"onclick="" >.</button>
+                <button class="btn btn-warning fw-bolder fs-5"  data-action="clear"onclick="" >AC</button>
+                <button class="operator btn btn-warning fw-bolder fs-5" data-action="add"onclick="" >+</button>
+                <button class="equal-span-four btn btn-warning fw-bolder fs-5" data-action="calculate" onclick="" >=</button>
             </div>
     
         </div>
