started with javascript

--- a/index.html
+++ b/index.html
@@ -14,29 +14,29 @@
     <main class="container-fluid d-flex justify-content-center">
         <div class="calculator-grid">
             <input class="display" type="text"  readonly>
-            <div class="calculator-output">
-                <div class="previous-operand"></div>
-                <div class="current-operand"></div>
+            <div id="calculator-output">
+                <div class="previousOperand"></div>
+                <div class="currentOperand"></div>
     
             </div>
             <div class="calculator-keys">
-                <button class="btn btn-warning fw-bolder fs-5" onclick="" >7</button>
-                <button class="btn btn-warning fw-bolder fs-5" onclick="" >8</button>
-                <button class="btn btn-warning fw-bolder fs-5" onclick="" >9</button>
+                <button class="number btn btn-warning fw-bolder fs-5" onclick="" >7</button>
+                <button class="number btn btn-warning fw-bolder fs-5" onclick="" >8</button>
+                <button class="number btn btn-warning fw-bolder fs-5" onclick="" >9</button>
                 <button class="operator btn btn-warning fw-bolder fs-5" data-action="divide"onclick="" >&divide;</button>
-                <button class="btn btn-warning fw-bolder fs-5" onclick="" >4</button>
-                <button class="btn btn-warning fw-bolder fs-5" onclick="" >5</button>
-                <button class="btn btn-warning fw-bolder fs-5" onclick="" >6</button>
+                <button class="number btn btn-warning fw-bolder fs-5" onclick="" >4</button>
+                <button class="number btn btn-warning fw-bolder fs-5" onclick="" >5</button>
+                <button class="number btn btn-warning fw-bolder fs-5" onclick="" >6</button>
                 <button class="operator btn btn-warning fw-bolder fs-5" data-action="multiply"onclick="" >&times;</button>
-                <button class="btn btn-warning fw-bolder fs-5" onclick="" >1</button>
-                <button class="btn btn-warning fw-bolder fs-5" onclick="" >2</button>
-                <button class="btn btn-warning fw-bolder fs-5" onclick="" >3</button>
+                <button class="number btn btn-warning fw-bolder fs-5" onclick="" >1</button>
+                <button class="number btn btn-warning fw-bolder fs-5" onclick="" >2</button>
+                <button class="number btn btn-warning fw-bolder fs-5" onclick="" >3</button>
                 <button class="operator btn btn-warning fw-bolder fs-5" data-action="subtract"onclick="" >-</button>
-                <button class="btn btn-warning fw-bolder fs-5" onclick="" >0</button>
-                <button class="btn btn-warning fw-bolder fs-5"  data-action="decimal"onclick="" >.</button>
-                <button class="btn btn-warning fw-bolder fs-5"  data-action="clear"onclick="" >AC</button>
+                <button class="number btn btn-warning fw-bolder fs-5"  data-action="decimal"onclick="" >.</button>
+                <button class="number btn btn-warning fw-bolder fs-5" onclick="" >0</button>
+                <button class="clear btn btn-warning fw-bolder fs-5"  data-action="clear"onclick="" >AC</button>
                 <button class="operator btn btn-warning fw-bolder fs-5" data-action="add"onclick="" >+</button>
-                <button class="equal-span-four btn btn-warning fw-bolder fs-5" data-action="calculate" onclick="" >=</button>
+                <button class="equal btn btn-warning fw-bolder fs-5" data-action="calculate" onclick="" >=</button>
             </div>
     
         </div>
