--- a/index.html
+++ b/index.html
@@ -11,32 +11,27 @@
     <title>Calculator</title>
 </head>
 <body> 
-    <main class="container-fluid d-flex justify-content-center">
-        <div class="calculator-grid">
-            <input class="display" type="text"  readonly>
-            <div id="calculator-output">
-                <div class="previousOperand"></div>
-                <div class="currentOperand"></div>
-    
-            </div>
+    <main class="container-fluid d-flex justify-content-center mt-5">
+        <div class="calculator-grid border border-5 border-warning mt-5 ">
+            <input id="input" type="text" placeholder="0" readonly class="text-center border border-5 border-warning">
             <div class="calculator-keys">
-                <button class="number btn btn-warning fw-bolder fs-5" onclick="" >7</button>
-                <button class="number btn btn-warning fw-bolder fs-5" onclick="" >8</button>
-                <button class="number btn btn-warning fw-bolder fs-5" onclick="" >9</button>
-                <button class="operator btn btn-warning fw-bolder fs-5" data-action="divide"onclick="" >&divide;</button>
-                <button class="number btn btn-warning fw-bolder fs-5" onclick="" >4</button>
-                <button class="number btn btn-warning fw-bolder fs-5" onclick="" >5</button>
-                <button class="number btn btn-warning fw-bolder fs-5" onclick="" >6</button>
-                <button class="operator btn btn-warning fw-bolder fs-5" data-action="multiply"onclick="" >&times;</button>
-                <button class="number btn btn-warning fw-bolder fs-5" onclick="" >1</button>
-                <button class="number btn btn-warning fw-bolder fs-5" onclick="" >2</button>
-                <button class="number btn btn-warning fw-bolder fs-5" onclick="" >3</button>
-                <button class="operator btn btn-warning fw-bolder fs-5" data-action="subtract"onclick="" >-</button>
-                <button class="number btn btn-warning fw-bolder fs-5"  data-action="decimal"onclick="" >.</button>
-                <button class="number btn btn-warning fw-bolder fs-5" onclick="" >0</button>
-                <button class="clear btn btn-warning fw-bolder fs-5"  data-action="clear"onclick="" >AC</button>
-                <button class="operator btn btn-warning fw-bolder fs-5" data-action="add"onclick="" >+</button>
-                <button class="equal btn btn-warning fw-bolder fs-5" data-action="calculate" onclick="" >=</button>
+                <button class="number btn btn-warning fw-bolder fs-5" onclick="display('7')" >7</button>
+                <button class="number btn btn-warning fw-bolder fs-5" onclick="display('8')" >8</button>
+                <button class="number btn btn-warning fw-bolder fs-5" onclick="display('9')" >9</button>
+                <button class="operator btn btn-warning fw-bolder fs-5" data-action="divide"onclick="display('/')" >&divide;</button>
+                <button class="number btn btn-warning fw-bolder fs-5" onclick="display('4')" >4</button>
+                <button class="number btn btn-warning fw-bolder fs-5" onclick="display('5')" >5</button>
+                <button class="number btn btn-warning fw-bolder fs-5" onclick="display('6')" >6</button>
+                <button class="operator btn btn-warning fw-bolder fs-5" data-action="multiply"onclick="display('*')" >&times;</button>
+                <button class="number btn btn-warning fw-bolder fs-5" onclick="display('1')" >1</button>
+                <button class="number btn btn-warning fw-bolder fs-5" onclick="display('2')" >2</button>
+                <button class="number btn btn-warning fw-bolder fs-5" onclick="display('3')" >3</button>
+                <button class="operator btn btn-warning fw-bolder fs-5" data-action="subtract"onclick="display('-')" >-</button>
+                <button class="number btn btn-warning fw-bolder fs-5"  data-action="decimal"onclick="display('.')" >.</button>
+                <button class="number btn btn-warning fw-bolder fs-5" onclick="display('0')" >0</button>
+                <button class="clear btn btn-warning fw-bolder fs-5"  data-action="clear"onclick="clean()" >AC</button>
+                <button class="operator btn btn-warning fw-bolder fs-5" data-action="add"onclick="display('+')" >+</button>
+                <button class="equal btn btn-warning fw-bolder fs-5" data-action="calculate" onclick="calculate('=')" >=</button>
             </div>
     
         </div>
